<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">SWTOR Utilities setup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="sales">Sales</string>
    <string name="qr">QR mCard</string>
    <string name="history">History of purchases</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer closed</string>
   <!--                 Shops                 -->
    <string name="ca">C&amp;A</string>
    <string name="desigual">Desigual</string>
    <string name="soliver">s.Oliver</string>
    <string name="zara">Zara</string>

    <string name="this_week">this week</string>
    <string name="next_week">next week</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna, posuere eget, vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor neque nec urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim eleifend felis pretium feugiat. Vivamus quis mi. Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit ornare lobortis. Curabitur a felis in nunc fringilla tristique.</string>

    <string name="rusure">Do you realy want to login anonymously? You won\'t be able to login on any other device or web to view your purchase history or favourite list. </string>



    <!--                 Playable character races/species                -->

    <string-array name="races">
        <item>@string/torguta</item>
        <item>@string/human</item>
        <item>@string/twillek</item>
        <item>@string/zabrak</item>
        <item>@string/sith</item>
        <item>@string/miraluka</item>
        <item>@string/chiss</item>
        <item>@string/cathar</item>
        <item>@string/cyborg</item>
        <item>@string/mirialan</item>
        <item>@string/rattataki</item>
    </string-array>

    <string name="human">Human</string>
    <string name="twillek">Twillek</string>
    <string name="zabrak">Zabrak</string>
    <string name="sith">Sith pureblood</string>
    <string name="miraluka">Miraluka</string>
    <string name="chiss">Chiss</string>
    <string name="cathar">Cathar</string>
    <string name="cyborg">Cyborg</string>
    <string name="mirialan">Mirialan</string>
    <string name="rattataki">Rattataki</string>
    <string name="torguta">Torguta</string>

    <!--                 Character creation fragment                -->

    <string-array name="rep_ac">
        <item>@string/ac_guard</item>
        <item>@string/ac_sent</item>
        <item>@string/ac_sage</item>
        <item>@string/ac_shadow</item>
        <item>@string/ac_mando</item>
        <item>@string/ac_vang</item>
        <item>@string/ac_scoundrel</item>
        <item>@string/ac_slinger</item>
     </string-array>

    <string name="char_name">Character name</string>
    <string name="ac">Advanced class</string>
    <string name="ac_guard">Guardian</string>
    <string name="ac_sent">Sentinel</string>
    <string name="ac_sage">Sage</string>
    <string name="ac_shadow">Shadow</string>
    <string name="ac_mando">Commando</string>
    <string name="ac_vang">Vanguard</string>
    <string name="ac_scoundrel">Scoundrel</string>
    <string name="ac_slinger">Gunslinger</string>

    <string-array name="imp_ac">
        <item>@string/ac_jugger</item>
        <item>@string/ac_mara</item>
        <item>@string/ac_sorc</item>
        <item>@string/ac_sin</item>
        <item>@string/ac_merc</item>
        <item>@string/ac_pt</item>
        <item>@string/ac_op</item>
        <item>@string/ac_sniper</item>
    </string-array>

    <string name="ac_jugger">Juggernaut</string>
    <string name="ac_mara">Marauder</string>
    <string name="ac_sorc">Sorcerer</string>
    <string name="ac_sin">Assassin</string>
    <string name="ac_merc">Mercenery</string>
    <string name="ac_pt">Powertech</string>
    <string name="ac_op">Operative</string>
    <string name="ac_sniper">Sniper</string>

    <string-array name="roles">
        <item>@string/role_tank</item>
        <item>@string/role_dps</item>
        <item>@string/role_heal</item>

    </string-array>

    <string-array name="specs">
        <item>@string/pvp</item>
        <item>@string/pve</item>
    </string-array>

    <string name="specs">Specs</string>
    <string name="pve">PvE</string>
    <string name="pvp">PvP</string>


    <string name="role">Role</string>
    <string name="role_tank">Tank</string>
    <string name="role_dps">DPS</string>
    <string name="role_heal">Healer</string>

    <string-array name="gender">
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>

    </string-array>

    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>


    <string name="set_disc">set Disciplines</string>

    <string-array name="fraction">
        <item>@string/fraction_rep</item>
        <item>@string/fraction_imp</item>
    </string-array>

    <string name="fraction">Fraction</string>
    <string name="fraction_rep">Republic</string>
    <string name="fraction_imp">Empire</string>

    <string name="spec">Specialization</string>

    <!--           US      Servers              -->
    <!--           RP-PVP              -->
    <string name="jungma">Jung Ma</string>
    <!--           RP              -->
    <string name="Begeerencolony">Bergeren Colony</string>
    <string name="ebonhawk">The Ebon Hawk</string>
    <!--           PVP              -->
    <string name="bastion">The Bastion</string>
    <string name="prophecyofthefive">Prophecy of the Five</string>
    <!--           PVE              -->
    <string name="harbringer">The Harbringer</string>
    <string name="jedicovenant">Jedi Covenant</string>
    <string name="shadowlands">The Shadowlands</string>

    <!--           EU      Servers              -->
    <!--           French              -->
    <!--           RP              -->
    <string name="battlemeditation">Battle Meditation</string>
    <!--           PVP              -->
    <string name="darthnihilus">Darth Nihilus</string>
    <!--           PVE              -->
    <string name="mantleoftheforce">Mantle of the Force</string>
    <!--           German              -->
    <!--           RP              -->
    <string name="vanjervalischain">Vanjervalis Chain</string>
    <!--           PVP              -->
    <string name="jarkaisword">JarKai Sword</string>
    <!--           PVE              -->
    <string name="t3m4">T3-M4</string>
    <!--           English              -->
    <!--           RP              -->
    <string name="progenitor">The Progenitor</string>
    <!--           PVP              -->
    <string name="tomboffreedonnadd">Tomb of Freedon Nadd</string>
    <!--           PVE              -->
    <string name="redeclipse">The Red Eclipse</string>




</resources>
