<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="0dp"
            />
        <ImageButton
            android:id="@+id/btn_rep"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rep"
            />
        <ImageButton

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_imp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
        <ImageButton
            android:id="@+id/btn_juggernaout"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ac_jugger"
            />
        <ImageButton
            android:id="@+id/btn_mara"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ac_mara"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
        <ImageButton
            android:id="@+id/btn_sorc"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ac_sorc"
            />
        <ImageButton
            android:id="@+id/btn_sin"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ac_sin"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
        <ImageButton
            android:id="@+id/btn_merc"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ac_merc"
            />
        <ImageButton
            android:id="@+id/btn_pt"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ac_pt"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
        <ImageButton
            android:id="@+id/btn_op"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ac_op"
            />
        <ImageButton
            android:id="@+id/btn_sniper"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ac_sniper"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
    </LinearLayout>



</LinearLayout>